# twitter_oauth_sampler

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
routes/: __init__.py  oauth1_0a.py  oauth2_0.py
templates/: index.html  oauth1_0a.html  oauth2_0.html
