[tool.poetry]
name = "twitter-oauth-sampler"
version = "0.1.0"
description = ""
authors = ["Chanmoro <kazuki.m777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.1"
requests-oauthlib = "^1.3.1"
tweepy = "^4.14.0"
orjson = "^3.8.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
